@@ -267,3 +267,16 @@ Feature: Elements
   Scenario: Element size
     When I retrieve a link element
     Then I should be able to know its size
+
+  Scenario: Getting the height of an element
+    When I retrieve a link element
+    Then the element height is not 0
+
+  Scenario: Getting the width of an element
+    When I retrieve a link element
+    Then the element width is not 0
+
+  Scenario: Getting the centre of an element
+    When I retrieve a button element
+    Then the element centre should be greater than element y position
+    And the element centre should be greater than element x position
