@@ -184,5 +184,42 @@ describe Druid::Elements::Element do
       expect(we).to receive(:size)
       element.size
     end
+
+
+    it "should have a height" do
+      expect(we).to receive(:wd).and_return(we)
+      expect(we).to receive(:size).and_return({'width' => 30, 'height' => 20})
+      expect(element.height).to eql 20
+    end
+
+    it "should have a width" do
+      expect(we).to receive(:wd).and_return(we)
+      expect(we).to receive(:size).and_return({'width' => 30, 'height' => 20})
+      expect(element.width).to eql 30
+    end
+
+    it "should have a centre" do
+      allow(we).to receive(:wd).and_return(we)
+      allow(we).to receive(:location).and_return({'y' => 80, 'x' => 40})
+      allow(we).to receive(:size).and_return({'width' => 30, 'height' => 20})
+      expect(element.centre).to include(
+        'y' => 90,
+        'x' => 55
+      )
+    end
+
+    it "should have a centre greater than y position" do
+      allow(we).to receive(:wd).and_return(we)
+      allow(we).to receive(:location).and_return({'y' => 80, 'x' => 40})
+      allow(we).to receive(:size).and_return({'width' => 30, 'height' => 20})
+      expect(element.centre['y']).to be > element.location['y']
+    end
+
+    it "should have a centre greater than x position" do
+      allow(we).to receive(:wd).and_return(we)
+      allow(we).to receive(:location).and_return({'y' => 80, 'x' => 40})
+      allow(we).to receive(:size).and_return({'width' => 30, 'height' => 20})
+      expect(element.centre['x']).to be > element.location['x']
+    end
   end
 end
